--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Twiddler!</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-    <script src="https://cdnjs.com/libraries/moment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="package-lock.json"></script>
     <script src="package.json"></script>
     <script src="data-generator.js"></script>
