minimum requirements almost fulfilled, developing ability for user to create posts

--- a/index.html
+++ b/index.html
@@ -8,10 +8,54 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
-    <script src="package-lock.json"></script>
-    <script src="package.json"></script>
     <script src="data-generator.js"></script>
     <script src="index.js"></script>
+
+    <style>
+
+      body{
+        background-color: rgb(21,32,43);
+      }
+
+      .tweet-container{
+        max-width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        
+      }
+
+      .table-main{
+        width: 400px;
+        border-radius: 10px;
+        background-color: rgb(25,39,52);
+        border-spacing: 30px;
+      }
+
+      .tweet-username{
+        text-align: left;
+        color: rgb(225,232,237);
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      .tweet-contents{
+        text-align: left;
+        text-wrap: wrap;
+        color: rgb(170,184,194);
+        padding-left: 25px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      .tweet-timestamp{
+        text-align: right;
+        color: rgb(136,153,172);
+        font-size: x-small;
+        font-family: Arial, Helvetica, sans-serif;
+        border-top: 2px solid rgb(225,232,237);
+      }
+
+    </style>
+
   </head>
   <body>
   </body>
