drafted code for creating a tweet & searching by hashtag, commented out

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         background-color: rgb(21,32,43);
       }
 
+      .refresh, .visitor-createTweet{
+        background-color: rgb(25,39,52);
+        border-radius: 10px;
+        color:rgb(225,232,237);
+        border-color: rgb(225,232,237);
+        height:50px;
+        width:50px;
+        border-style: solid;
+        margin-right: 10px;
+        font-size:xx-large;
+      }
+
       .tweet-container{
         max-width: fit-content;
         margin-left: auto;
